# Scriptable-OpenNetBattle-Server

./: .gitignore  Cargo.toml  about.toml
areas/: default.tmx  original_index.tmx
assets/: .gitignore
assets/tiles/: floor.tsx
scripts/: crazy_progs.lua  example_bot.lua  example_encounters.lua  gravy_bot.lua  underfloor_bot.lua
src/net/: net.rs
src/plugins/lua/api/: bot_api.rs
