[package]
name = "net_battle_server"
version = "0.1.1"
authors = ["Arthur <arthurcose@gmail.com>", "Timothy Quilling <teqed@shatteredsky.net>"]
edition = "2021"
license = "GPL-3.0"
default-run = "net_battle_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.11.0"
futures = "0.3.21"
isahc = "1.7.1"
byteorder = "1.4.3"
uuid = { version = "1.0.0", features = ["v4"] }
mlua = { version = "0.7.4", features = ["vendored", "lua54"] }
clap = "3.1.17"
minidom = "0.12"
itertools = "0.10.3"
multi_mut = "0.1.3"
base64 = "0.13.0"
rand = "0.8.5"
zip = "0.6.2"
closure = "0.3.0"
log = "0.4.17"
fs_extra = "1.2.0"
termcolor = "1.1.3"
systemstat = "0.2.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
question_mark_used = "warn"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
